Fixed broken CSS reference

--- a/components/_modal.scss
+++ b/components/_modal.scss
@@ -15,7 +15,7 @@ $modal-backdrop: start-color('background');
     box-shadow: none;
 
     .modal-header {
-      @extend .heading-1;
+      @extend h1;
     }
 
     .modal-body {
